--- a/index.html
+++ b/index.html
@@ -160,6 +160,23 @@
                 </button>
             </div>
         </aside>
+
+        <div class="cards-container">
+
+           <!-- <div class="product-card">
+               <img src="https://images.pexels.com/photos/1149601/pexels-photo-1149601.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt=""> 
+               <div class="product-info">
+                <div>
+                    <p>$120.000</p>
+                    <p>Bike</p>
+                </div>
+                <figure>
+                    <img src="./icons/bt_add_to_cart.svg" alt="">
+                   </figure>
+               </div>
+            </div>-->
+
+        </div>
     <script src="./main.js"></script>   
 </body>
 </html>
